--- a/Season2/devTinder_project/Backend/package.json
+++ b/Season2/devTinder_project/Backend/package.json
@@ -10,6 +10,7 @@
   "author": "sayan",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.21.2",
     "mongoose": "^8.9.3",
     "nodemon": "^3.1.9",
