--- a/Season2/devTinder_project/Frontend/package.json
+++ b/Season2/devTinder_project/Frontend/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.2",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
